# aho

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml  version-bump.yml
aho/: __init__.py
aho/core/: __init__.py  agent.py  base.py  llm.py  memory.py  orchestrator.py  tools.py  types.py
aho/plugins/: anthropic_plugin.py  azureai_plugin.py  base.py  claude_plugin.py  google_gemini_plugin.py  groq_plugin.py  ollama_plugin.py  openai_plugin.py
aho/plugins/templates/: ollama_templates.yaml
aho/tools/: __init__.py  base.py  config.py
aho/tools/googledrive/: google_drive.py
aho/tools/search/: __init__.py  bing.py  brave.py  duckduckgo.py  exa.py  google.py  web_search.py
aho/tools/system/: file_system.py
aho/tools/utils/: registry.py
aho/tools/vector/: faiss_vector.py  milvus_vector_tool.py  pinecone_vector_tool.py
aho/workflows/: __init__.py  parallel_processor.py  prompt_chain.py
examples/: GETTING_STARTED.md  ORCHESTRATION.md  groq_tool_example.py  openai_tool_example.py  prompt_chain_example.py  system_tool_example.py
examples/ollama/: basic_example.py
tests/: test_agent.py  test_llm.py  test_memory.py
