[metadata]
name = aho-framework
version = 0.1.0
description = Advanced Hybrid Orchestration Framework for AI Agents
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    httpx>=0.27.0
    pydantic>=2.0
    numpy>=1.26.0
    scikit-learn>=1.3.0
    networkx>=3.2
    python-dotenv>=1.0.0
    loguru>=0.7.2
    tqdm>=4.66.0
    typing-extensions>=4.8.0

[options.extras_require]
llm =
    openai>=1.0.0
    sentence-transformers>=2.2.2
local =
    transformers>=4.35.0
    torch>=2.0.0
    accelerate>=0.24.0
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.23.5
    mypy>=1.6.0
    black>=23.10.0
    isort>=5.12.0
    flake8>=6.1.0

[options.packages.find]
where = .
include = aho*
